@@ -1,5 +1,7 @@
 Revision history for HTML::StateTable
 
+          - Date and DateTime cell traits add classes to td
+          - Chartable title styling improvements
           - Form role adds form_classes. Display tables with form styling
           - Remove had coded reference to icons file
           - Better form dialog and search CSS
